--- a/website/index.html
+++ b/website/index.html
@@ -65,37 +65,31 @@
       display: none;
     }
 
-    .icon-btn.menu-toggle,
-    .icon-btn.cart-toggle {
-      width: 18px;
-      height: 18px;
+    /* Smaller and higher menu icon */
+    .icon-btn.menu-toggle {
+      width: 20px; /* smaller */
+      height: 20px; /* smaller */
       position: relative;
       cursor: pointer;
-    }
-
-    .icon-btn.menu-toggle {
-      margin-top: -2px; /* higher */
-    }
-
-    .icon-btn.cart-toggle {
-      margin-top: -2px; /* higher */
+      margin-top: 3px; /* higher */
+      margin-left: 0;
     }
 
     .icon-btn.menu-toggle span {
       position: absolute;
-      height: 2px;
+      height: 2.5px;
       width: 100%;
       background-color: black;
       left: 0;
       transition: 0.3s ease;
     }
 
-    .icon-btn.menu-toggle span:nth-child(1) { top: 2px; }
-    .icon-btn.menu-toggle span:nth-child(2) { top: 8px; }
-    .icon-btn.menu-toggle span:nth-child(3) { top: 14px; }
+    .icon-btn.menu-toggle span:nth-child(1) { top: 3px; }
+    .icon-btn.menu-toggle span:nth-child(2) { top: 9px; }
+    .icon-btn.menu-toggle span:nth-child(3) { top: 15px; }
 
     .icon-btn.menu-toggle.open span:nth-child(1) {
-      top: 8px;
+      top: 9px;
       transform: rotate(45deg);
     }
 
@@ -104,8 +98,17 @@
     }
 
     .icon-btn.menu-toggle.open span:nth-child(3) {
-      top: 8px;
+      top: 9px;
       transform: rotate(-45deg);
+    }
+
+    /* Cart icon higher only */
+    .icon-btn.cart-toggle {
+      width: 24px;
+      height: 24px;
+      position: relative;
+      cursor: pointer;
+      margin-top: 3px; /* higher */
     }
 
     .icon-btn.cart-toggle img {
@@ -118,10 +121,10 @@
     .icon-btn.cart-toggle.open::after {
       content: "";
       position: absolute;
-      width: 18px;
-      height: 2px;
+      width: 24px;
+      height: 2.5px;
       background: black;
-      top: 8px;
+      top: 11px;
       left: 0;
       transform-origin: center;
       transition: 0.3s ease;
@@ -149,40 +152,171 @@
       display: none;
     }
 
-    .sidebar {
+    .image-box {
+      margin-top: 64px;
+      width: 100%;
+      height: 400px;
+      background: black;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .slider {
+      display: flex;
+      width: 300%;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide {
+      flex: 0 0 100%;
+      height: 400px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 18px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      padding: 6px;
+      cursor: pointer;
+      z-index: 2;
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: translateY(-50%) rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: translateY(-50%) rotate(-45deg);
+    }
+
+    .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
+      background: white;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+      transition: transform 0.4s ease-in-out;
+      z-index: 1100;
+      overflow-y: auto;
+      height: 100vh;
+    }
+
+    .sidebar {
       left: 0;
       width: 100vw;
-      height: 100vh;
-      background: white;
-      z-index: 1100;
+      padding: 80px 20px;
       transform: translateX(-100%);
-      transition: transform 0.4s ease-in-out;
-      padding-top: 80px;
-      text-align: center;
+      display: flex;
+      flex-direction: column;
     }
 
     .sidebar.open {
       transform: translateX(0);
     }
 
-    .sidebar a {
-      display: block;
-      font-size: 24px;
-      padding: 20px 0;
-      text-decoration: none;
+    /* Sidebar menu links styling */
+    .sidebar nav {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      margin-top: 20px;
+    }
+
+    .sidebar nav a {
       color: black;
-      font-weight: 500;
-      transition: color 0.2s ease;
+      text-decoration: none;
+      font-size: 24px;
+      font-weight: 400;
+      text-align: left;
+      transition: color 0.3s ease;
     }
 
-    .sidebar a.active {
-      color: #777; /* lighter to indicate active page */
+    /* Lighter color for current page link */
+    .sidebar nav a.current {
+      color: #888888; /* lighter gray */
+      font-weight: 700;
     }
 
-    .sidebar a:hover {
-      color: #444;
+    /* Center links on mobile */
+    @media (max-width: 767px) {
+      .sidebar nav a {
+        text-align: center;
+      }
+    }
+
+    .cart-sidebar {
+      right: 0;
+      width: 50vw;
+      max-width: 280px;
+      padding: 80px 20px;
+      transform: translateX(100%);
+    }
+
+    .cart-sidebar.open {
+      transform: translateX(0);
+    }
+
+    .product-image-box {
+      width: 90vw;
+      max-width: 600px;
+      margin: 40px auto 8px auto;
+      background: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: visible;
+    }
+
+    .jersey-img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      transition: transform 0.25s ease-in-out;
+      image-rendering: auto;
+      cursor: pointer;
+    }
+
+    .jersey-img:hover {
+      transform: scale(1.03);
+    }
+
+    .product-info {
+      text-align: center;
+      margin-bottom: 24px;
+      margin-top: 16px;
+    }
+
+    .product-title {
+      font-weight: 700;
+      font-size: 22px;
+      margin-bottom: 4px;
+      cursor: pointer;
+      transition: border-bottom 0.2s ease;
+    }
+
+    .product-title:hover {
+      border-bottom: 1.5px solid black;
+    }
+
+    .product-color {
+      font-weight: 400;
+      font-size: 16px;
+      color: black;
+      margin-bottom: 4px;
+    }
+
+    .product-price {
+      font-weight: 400;
+      font-size: 20px;
     }
 
     @media (min-width: 768px) {
@@ -195,42 +329,95 @@
 <body>
 
 <header>
-  <div id="menuToggle" class="icon-btn menu-toggle" role="button" tabindex="0">
+  <div id="menuToggle" class="icon-btn menu-toggle" role="button" tabindex="0" aria-label="Toggle menu">
     <span></span>
     <span></span>
     <span></span>
   </div>
 
-  <div class="logo-container" id="logoContainer" role="button" tabindex="0">
+  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Home">
     <span class="logo-text" id="logoText">MATT SCIANNA</span>
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="Logo" />
   </div>
 
-  <div id="cartIcon" class="icon-btn cart-toggle" title="Cart">
+  <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
     <div id="cartCount" class="cart-count">0</div>
   </div>
 </header>
 
-<nav id="sidebar" class="sidebar">
-  <a href="#" class="active">HOME</a>
-  <a href="#">LOOKBOOKS</a>
-  <a href="#">VISION</a>
-  <a href="#">POLICIES</a>
-  <a href="#">CONTACT</a>
+<div class="image-box">
+  <div class="slider" id="slider">
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+  </div>
+  <div class="arrow left" onclick="prevSlide()"></div>
+  <div class="arrow right" onclick="nextSlide()"></div>
+</div>
+
+<div style="display: flex; flex-direction: column; align-items: center; margin-top: 40px;">
+  <div class="product-image-box" onclick="location.href='/jersey/red'">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
+  </div>
+  <div class="product-info">
+    <div class="product-title" onclick="location.href='/jersey/red'">TWO-FIVE JERSEY</div>
+    <div class="product-color">RED</div>
+    <div class="product-price">$49.99 USD</div>
+  </div>
+
+  <div class="product-image-box" onclick="location.href='/jersey/white'">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
+  </div>
+  <div class="product-info">
+    <div class="product-title" onclick="location.href='/jersey/white'">TWO-FIVE JERSEY</div>
+    <div class="product-color">WHITE</div>
+    <div class="product-price">$49.99 USD</div>
+  </div>
+</div>
+
+<!-- Sidebar with menu items -->
+<nav id="sidebar" class="sidebar" aria-label="Main navigation">
+  <nav>
+    <a href="#" class="current">HOME</a>
+    <a href="#">LOOKBOOKS</a>
+    <a href="#">VISION</a>
+    <a href="#">CONTACT</a>
+    <a href="#">POLICIES</a>
+  </nav>
 </nav>
 
-<nav id="cartSidebar" class="cart-sidebar">
-  <p>Cart sidebar content goes here.</p>
-</nav>
+<nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
 
 <script>
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
   const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
+  const logoText = document.getElementById('logoText');
+  const logoImage = document.getElementById('logoImage');
+  const logoContainer = document.getElementById('logoContainer');
+  const slider = document.getElementById('slider');
   const cartCount = document.getElementById('cartCount');
+  let currentIndex = 0;
   let cartItems = 0;
+  const slides = slider.children;
+
+  function updateSlide(index) {
+    slider.style.transform = `translateX(-${index * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  setInterval(nextSlide, 10000);
 
   menuToggle.addEventListener('click', () => {
     const isOpen = menuToggle.classList.toggle('open');
@@ -252,6 +439,23 @@
       sidebar.classList.remove('open');
       menuToggle.classList.remove('open');
       document.body.classList.remove('sidebar-open');
+    }
+  });
+
+  logoContainer.addEventListener('click', () => {
+    setTimeout(() => {
+      location.href = location.origin + location.pathname;
+    }, 250);
+  });
+
+  window.addEventListener('scroll', () => {
+    const scrollY = window.scrollY;
+    if (scrollY > 60) {
+      logoText.style.display = 'none';
+      logoImage.style.display = 'block';
+    } else {
+      logoText.style.display = 'block';
+      logoImage.style.display = 'none';
     }
   });
 
